--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+s<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -58,7 +58,7 @@
 
   <div class="links">
     <a href="https://github.com/czeskleba" target="_blank">📁 View on GitHub</a>
-    <a href="https://www.buymeacoffee.com/czeskleba" target="_blank">☕ Buy me a coffee</a>
+    <a href="https://www.buymeacoffee.com/denisczeskleba" target="_blank">☕ Buy me a coffee</a>
     <a href="#docs">📖 Documentation (coming soon)</a>
   </div>
 
