--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@ s<!DOCTYPE html>
 </head>
 <body>
   <header>
-    <h1>Welcome to czeskleba.com</h1>
+    <h1>Welcome!</h1>
     <p>A minimal landing page for my software and simulation projects. This is a place to share tools, documentation, and updates.</p>
   </header>
 
   <div class="links">
-    <a href="https://github.com/czeskleba" target="_blank">📁 View on GitHub</a>
+    <a href="https://github.com/DenisCzeskleba/WeldCraft" target="_blank">📁 View on GitHub</a>
     <a href="https://www.buymeacoffee.com/denisczeskleba" target="_blank">☕ Buy me a coffee</a>
     <a href="#docs">📖 Documentation (coming soon)</a>
   </div>
