--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   </style>
 </head>
 <body>
-  <button class="theme-toggle" onclick="toggleTheme()">🌗 Toggle theme</button>
+  <button class="theme-toggle" onclick="toggleTheme()">🌗 Light/Dark Mode</button>
 
   <header>
     <h1>Welcome!</h1>
