--- a/index.html
+++ b/index.html
@@ -97,7 +97,26 @@
     <a href="https://www.buymeacoffee.com/denisczeskleba" target="_blank">☕ Buy me a coffee</a>
     <a href="#docs">📖 Documentation (coming soon)</a>
   </div>
-
+    <section id="impressum" style="margin-top: 3rem; font-size: 0.9rem; max-width: 600px;">
+    <h2>Impressum</h2>
+    <p><strong>Angaben gemäß § 5 TMG</strong></p>
+    <p>
+      Max Mustermann<br>
+      Musterstraße 1<br>
+      12345 Musterstadt<br>
+      Deutschland
+    </p>
+    <p>
+      <strong>Kontakt:</strong><br>
+      E-Mail: max@mustermann.de<br>
+      Telefon: 01234 / 567890
+    </p>
+    <p>
+      Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:<br>
+      Max Mustermann, Adresse wie oben
+    </p>
+  </section>
+  
   <footer>
     <p>&copy; 2025 czeskleba.com</p>
   </footer>
