--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
       color: #888;
     }
 
+    footer a {
+      color: inherit;
+      text-decoration: underline;
+    }
+
     .theme-toggle {
       position: absolute;
       top: 1rem;
@@ -81,6 +86,13 @@
       color: var(--button-text);
       border: none;
       border-radius: 5px;
+    }
+
+    #impressum {
+      scroll-margin-top: 100px;
+      margin-top: 3rem;
+      font-size: 0.9rem;
+      max-width: 600px;
     }
   </style>
 </head>
@@ -97,7 +109,8 @@
     <a href="https://www.buymeacoffee.com/denisczeskleba" target="_blank">☕ Buy me a coffee</a>
     <a href="#docs">📖 Documentation (coming soon)</a>
   </div>
-    <section id="impressum" style="margin-top: 3rem; font-size: 0.9rem; max-width: 600px;">
+
+  <section id="impressum">
     <h2>Impressum</h2>
     <p><strong>Angaben gemäß § 5 TMG</strong></p>
     <p>
@@ -116,9 +129,9 @@
       Max Mustermann, Adresse wie oben
     </p>
   </section>
-  
+
   <footer>
-    <p>&copy; 2025 czeskleba.com</p>
+    <p>&copy; 2025 czeskleba.com · <a href="#impressum">📄 Impressum</a></p>
   </footer>
 
   <script>
