--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 czeskleba.com · <a href="#impressum">📄 Impressum</a></p>
+    <p>&copy; 2025 czeskleba.com · <a href="#impressum"> Impressum</a></p>
   </footer>
 
   <script>
