--- a/index.html
+++ b/index.html
@@ -110,28 +110,8 @@
     <a href="#docs">📖 Documentation (coming soon)</a>
   </div>
 
-  <section id="impressum">
-    <h2>Impressum</h2>
-    <p><strong>Angaben gemäß § 5 TMG</strong></p>
-    <p>
-      Max Mustermann<br>
-      Musterstraße 1<br>
-      12345 Musterstadt<br>
-      Deutschland
-    </p>
-    <p>
-      <strong>Kontakt:</strong><br>
-      E-Mail: max@mustermann.de<br>
-      Telefon: 01234 / 567890
-    </p>
-    <p>
-      Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:<br>
-      Max Mustermann, Adresse wie oben
-    </p>
-  </section>
-
   <footer>
-    <p>&copy; 2025 czeskleba.com · <a href="#impressum"> Impressum</a></p>
+    <a href="/impressum.html"> Impressum</a>
   </footer>
 
   <script>
