--- a/impressum.html
+++ b/impressum.html
@@ -121,4 +121,19 @@
       document.body.classList.toggle("dark");
       localStorage.setItem(
         "theme",
-        document.body
+        document.body.classList.contains("dark") ? "dark" : "light"
+      );
+    }
+
+    (function () {
+      const saved = localStorage.getItem("theme");
+      if (
+        saved === "dark" ||
+        (!saved && window.matchMedia("(prefers-color-scheme: dark)").matches)
+      ) {
+        document.body.classList.add("dark");
+      }
+    })();
+  </script>
+</body>
+</html>
