--- a/visualizer/index.html
+++ b/visualizer/index.html
@@ -4,108 +4,116 @@ title: Lattice Visualizer
 permalink: /visualizer/
 ---
 
-<p style="margin: 12px 0;">Interactive lattice visualization (SC/BCC/FCC) with substitutionals and interstitial hydrogen.</p>
+<p style="margin: 12px 0;">
+  Interactive lattice visualization (SC/BCC/FCC) with substitutionals and interstitial hydrogen.
+</p>
 
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Lattice Visualizer</title>
-  <link rel="stylesheet" href="./styles.css">
-  <script type="module">
-    import * as THREE from 'https://unpkg.com/three@0.160.0/build/three.module.js';
-    import { OrbitControls } from 'https://unpkg.com/three@0.160.0/examples/jsm/controls/OrbitControls.js';
-    window.THREE = THREE;
-    window.OrbitControls = OrbitControls;
-  </script>
-</head>
-<body>
-  <div id="app">
-    <div id="panel">
-      <div class="row">
-        <label>Mode</label>
-        <select id="mode">
-          <option value="demo">Demo</option>
-          <option value="lattice" selected>Lattice</option>
-        </select>
-      </div>
-      <div class="row">
-        <label>Lattice</label>
-        <select id="lattice">
-          <option value="SC">SC</option>
-          <option value="BCC" selected>BCC</option>
-          <option value="FCC">FCC</option>
-        </select>
-      </div>
-      <div class="row" data-for="lattice">
-        <label>Target base atoms</label>
-        <input id="feCount" type="number" min="100" max="1000000" step="100" value="1000000">
-      </div>
-      <div class="row">
-        <label>Base visual size</label>
-        <input id="feSize" type="range" min="0.01" max="1" step="0.01" value="1">
-        <span id="feSizeVal">1.00</span>
-      </div>
-      <fieldset>
-        <legend>Substitutionals</legend>
-        <div class="row">
-          <label>A fraction (black)</label>
-          <input id="cFrac" type="range" min="0" max="0.05" step="0.0005" value="0">
-          <span id="cFracVal">0.000</span>
-        </div>
-        <div class="row">
-          <label>A size</label>
-          <input id="cSize" type="range" min="0.01" max="5" step="0.01" value="1">
-          <span id="cSizeVal">1.00</span>
-        </div>
-        <div class="row">
-          <label>B fraction (red)</label>
-          <input id="vFrac" type="range" min="0" max="0.05" step="0.0005" value="0">
-          <span id="vFracVal">0.000</span>
-        </div>
-        <div class="row">
-          <label>B size</label>
-          <input id="vSize" type="range" min="0.01" max="5" step="0.01" value="1">
-          <span id="vSizeVal">1.00</span>
-        </div>
-      </fieldset>
-      <fieldset>
-        <legend>Interstitial (Blue)</legend>
-        <div class="row">
-          <label>H count</label>
-          <input id="hCount" type="number" min="0" max="30" step="1" value="0">
-        </div>
-        <div class="row">
-          <label>H size</label>
-          <input id="hSize" type="range" min="0.01" max="1" step="0.01" value="0.5">
-          <span id="hSizeVal">0.50</span>
-        </div>
-        <div class="row" data-for="demo">
-          <label>Show interstitial sites</label>
-          <select id="siteScope">
-            <option value="canonical" selected>Canonical</option>
-            <option value="allFaces">All faces</option>
-          </select>
-        </div>
-      </fieldset>
-      <div class="row">
-        <label>Random seed</label>
-        <input id="seed" type="number" step="1" value="42">
-      </div>
-      <div class="row">
-        <button id="reset">Reset</button>
-        <button id="shot">Screenshot</button>
-      </div>
-      <div id="badge">Fe: 0 | C: 0 | V: 0 | H: 0</div>
+<link rel="stylesheet" href="/visualizer/styles.css">
+
+<div id="app">
+  <div id="panel">
+    <div class="row">
+      <label>Mode</label>
+      <select id="mode">
+        <option value="demo">Demo</option>
+        <option value="lattice" selected>Lattice</option>
+      </select>
     </div>
-    <canvas id="c"></canvas>
+
+    <div class="row">
+      <label>Lattice</label>
+      <select id="lattice">
+        <option value="SC">SC</option>
+        <option value="BCC" selected>BCC</option>
+        <option value="FCC">FCC</option>
+      </select>
+    </div>
+
+    <div class="row" data-for="lattice">
+      <label>Target base atoms</label>
+      <input id="feCount" type="number" min="100" max="1000000" step="100" value="100000">
+    </div>
+
+    <div class="row">
+      <label>Base visual size</label>
+      <input id="feSize" type="range" min="0.01" max="1" step="0.01" value="1">
+      <span id="feSizeVal">1.00</span>
+    </div>
+
+    <fieldset data-for="lattice">
+      <legend>Substitutionals (A/B)</legend>
+
+      <div class="row">
+        <label>A fraction (black)</label>
+        <input id="cFrac" type="range" min="0" max="0.05" step="0.0005" value="0">
+        <span id="cFracVal">0.000</span>
+      </div>
+      <div class="row">
+        <label>A size</label>
+        <input id="cSize" type="range" min="0.01" max="5" step="0.01" value="1">
+        <span id="cSizeVal">1.00</span>
+      </div>
+
+      <div class="row">
+        <label>B fraction (red)</label>
+        <input id="vFrac" type="range" min="0" max="0.05" step="0.0005" value="0">
+        <span id="vFracVal">0.000</span>
+      </div>
+      <div class="row">
+        <label>B size</label>
+        <input id="vSize" type="range" min="0.01" max="5" step="0.01" value="1">
+        <span id="vSizeVal">1.00</span>
+      </div>
+    </fieldset>
+
+    <fieldset>
+      <legend>Interstitial (Blue)</legend>
+      <div class="row">
+        <label>H count</label>
+        <input id="hCount" type="number" min="0" max="30" step="1" value="0">
+      </div>
+      <div class="row">
+        <label>H size</label>
+        <input id="hSize" type="range" min="0.01" max="1" step="0.01" value="0.5">
+        <span id="hSizeVal">0.50</span>
+      </div>
+      <div class="row" data-for="demo">
+        <label>Show interstitial sites</label>
+        <select id="siteScope">
+          <option value="canonical" selected>Canonical</option>
+          <option value="allFaces">All faces</option>
+        </select>
+      </div>
+    </fieldset>
+
+    <div class="row">
+      <label>Random seed</label>
+      <input id="seed" type="number" step="1" value="42">
+    </div>
+
+    <div class="row">
+      <button id="reset">Reset</button>
+      <button id="shot">Screenshot</button>
+    </div>
+
+    <div id="badge">Fe: 0 | C: 0 | V: 0 | H: 0</div>
   </div>
-  <script type="module" src="./params.js"></script>
-  <script type="module" src="./controls.js"></script>
-  <script type="module" src="./lattice.js"></script>
-  <script type="module" src="./render_points.js"></script>
-  <script type="module" src="./render_demo.js"></script>
-  <script type="module" src="./main.js"></script>
-</body>
-</html>
+
+  <canvas id="c"></canvas>
+</div>
+
+<!-- Load Three.js (pinned version) from CDN for now -->
+<script type="module">
+  import * as THREE from 'https://unpkg.com/three@0.160.0/build/three.module.js';
+  import { OrbitControls } from 'https://unpkg.com/three@0.160.0/examples/jsm/controls/OrbitControls.js';
+  window.THREE = THREE;
+  window.OrbitControls = OrbitControls;
+</script>
+
+<!-- Your app modules -->
+<script type="module" src="/visualizer/params.js"></script>
+<script type="module" src="/visualizer/controls.js"></script>
+<script type="module" src="/visualizer/lattice.js"></script>
+<script type="module" src="/visualizer/render_points.js"></script>
+<script type="module" src="/visualizer/render_demo.js"></script>
+<script type="module" src="/visualizer/main.js"></script>
