--- a/visualizer/index.html
+++ b/visualizer/index.html
@@ -4,9 +4,14 @@ title: Lattice Visualizer
 permalink: /visualizer/
 ---
 
-<p style="margin:12px 0;">
-  Interactive lattice visualization (SC/BCC/FCC) with substitutionals and interstitial hydrogen.
-</p>
+<script type="importmap">
+{
+  "imports": {
+    "three": "https://unpkg.com/three@0.160.0/build/three.module.js",
+    "three/examples/jsm/controls/OrbitControls.js": "https://unpkg.com/three@0.160.0/examples/jsm/controls/OrbitControls.js"
+  }
+}
+</script>
 
 <!-- Make this page full width under your site layout -->
 <style>
