--- a/visualizer/index.html
+++ b/visualizer/index.html
@@ -64,6 +64,12 @@ permalink: /visualizer/
         <input id="vFrac" type="range" min="0" max="0.05" step="0.0005" value="0">
         <span id="vFracVal">0.000</span>
       </div>
+
+      <div class="row demo-only">
+        <label>Site size (Demo)</label>
+        <input id="siteSize" type="range" min="0.01" max="1.0" step="0.01" value="0.40">
+        <span id="siteSizeVal">0.40</span>
+      </div>
       <div class="row">
         <label>B size</label>
         <input id="vSize" type="range" min="0.01" max="5" step="0.01" value="1">
@@ -103,6 +109,16 @@ permalink: /visualizer/
 
     <div id="badge">Fe: 0 | C: 0 | V: 0 | H: 0</div>
   </div>
+
+  
+<div id="legend" class="legend">
+  <div><span class="swatch" style="background:#888;"></span>Fe (base)</div>
+  <div><span class="swatch" style="background:#000;"></span>Subst A — C (black)</div>
+  <div><span class="swatch" style="background:#c00;"></span>Subst B — V (red)</div>
+  <div><span class="swatch" style="background:rgba(0,170,0,0.6);"></span>Tetrahedral site</div>
+  <div><span class="swatch" style="background:rgba(255,136,0,0.6);"></span>Octahedral site</div>
+  <div><span class="swatch" style="background:#26f;"></span>H (interstitial)</div>
+</div>
 
   <canvas id="c"></canvas>
 </div>
