--- a/visualizer/index.html
+++ b/visualizer/index.html
@@ -70,6 +70,18 @@ permalink: /visualizer/
         <input id="siteSize" type="range" min="0.01" max="1.0" step="0.01" value="0.40">
         <span id="siteSizeVal">0.40</span>
       </div>
+      
+      <div class="row demo-only">
+        <label>Interstitial site size</label>
+        <input id="interstitialSize" type="range" min="0.01" max="1.0" step="0.01" value="0.40">
+        <span id="interstitialSizeVal">0.40</span>
+      </div>
+      <div class="row demo-only">
+        <label>Interstitial site alpha</label>
+        <input id="interstitialAlpha" type="range" min="0.05" max="1.0" step="0.01" value="0.6">
+        <span id="interstitialAlphaVal">0.60</span>
+      </div>
+      
       <div class="row">
         <label>B size</label>
         <input id="vSize" type="range" min="0.01" max="5" step="0.01" value="1">
