--- a/visualizer/index.html
+++ b/visualizer/index.html
@@ -64,19 +64,13 @@ permalink: /visualizer/
         <input id="vFrac" type="range" min="0" max="0.05" step="0.0005" value="0">
         <span id="vFracVal">0.000</span>
       </div>
-
-      <div class="row demo-only">
-        <label>Site size (Demo)</label>
-        <input id="siteSize" type="range" min="0.01" max="1.0" step="0.01" value="0.40">
-        <span id="siteSizeVal">0.40</span>
-      </div>
       
-      <div class="row demo-only">
+      <div class="row" data-for="demo">
         <label>Interstitial site size</label>
         <input id="interstitialSize" type="range" min="0.01" max="1.0" step="0.01" value="0.40">
         <span id="interstitialSizeVal">0.40</span>
       </div>
-      <div class="row demo-only">
+      <div class="row" data-for="demo">
         <label>Interstitial site alpha</label>
         <input id="interstitialAlpha" type="range" min="0.05" max="1.0" step="0.01" value="0.6">
         <span id="interstitialAlphaVal">0.60</span>
