final edit for today

--- a/visualizer/index.html
+++ b/visualizer/index.html
@@ -244,13 +244,13 @@ permalink: /visualizer/
 
         <div class="info-buttons">
 
-          <a id="downloadExe" class="btn info-btn" href="#" title="Download the packaged Windows desktop build (EXE)." download role="button">Download Windows .exe</a>
+          <a id="downloadExe" class="btn info-btn" href="https://github.com/DenisCzeskleba/Lattice-Visualizer/releases/download/v0.2/visualizer_exe_Version.rar" title="Download the packaged Windows desktop build (EXE)." download role="button">Download Windows .exe</a>
 
-          <a id="downloadScripts" class="btn info-btn" href="#" title="Download the Python source bundle (script + YAML)." download role="button">Download Python scripts</a>
+          <a id="downloadScripts" class="btn info-btn" href="https://github.com/DenisCzeskleba/Lattice-Visualizer/releases/download/v0.2/Visualizer_Script_Version.rar" title="Download the Python source bundle (script + YAML)." download role="button">Download Python scripts</a>
 
         </div>
 
-        <p class="info-footnote">Prefer GitHub? Grab everything there instead: <a id="githubRepoLink" href="https://github.com/DenisCzeskleba/lattice-visualizer" title="Open the GitHub repository with source files and releases." target="_blank" rel="noopener">github.com/DenisCzeskleba/lattice-visualizer</a>.</p>
+        <p class="info-footnote">Prefer GitHub? Grab everything there instead: <a id="githubRepoLink" href="https://github.com/DenisCzeskleba/Lattice-Visualizer/releases/tag/v0.2 " title="Open the GitHub repository with source files and releases." target="_blank" rel="noopener">View release v0.2 directly on GitHub</a>.</p>
 
       </div>
 
